packages/lang/test/__golden__/config-errors/redact-missing-path.txt
error[TF010]: expected a field path after `body`, e.g. `redact body.email`
 --> tflw.config:3:14
  |
3 |   redact body
  |              ^
